<resources>
    <string name="app_name">kotlin_rxJava</string>
    <string name="format_time">%15d</string>
    <string name="format_runtime">%1$d min</string>
    <string name="retry">Retry</string>
    <string name="casts">Casts</string>
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brithday">Brithday</string>
    <string name="age">Age</string>
    <string name="dateOfBirth">Place Of Birth</string>
    <string name="department">Department</string>
    <string name="alsoKnownAs">Also Known As</string>
    <string name="deathDay">Deathday</string>
    <string name="biography">Biography</string>
    <string name="about">About</string>
    <string name="photo">Photo</string>
    <string name="dash">-</string>
</resources>
