<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/srl"
    android:animateLayoutChanges="true"
    tools:context=".UI.cast.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingVertical="@dimen/standard_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/brithday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/brithday" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="22" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:paddingVertical="@dimen/standard_full">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateOfBirth"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPlaceOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/dateOfBirth" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Acting" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alsoKnownAs"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvKnownAs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/full_names" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeathDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/standard_full"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deathDay"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDeathday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/date/ddmmyy" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/standard_full"
                android:paddingTop="@dimen/standard_full"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

            <TextView
                android:id="@+id/tvBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/standard_full"
                tools:text="@tools:sample/lorem/random"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>